<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <fragment
        android:id="@+id/start_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MainActivity"
        tools:ignore="FragmentTagUsage"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="30dp" />

    <Button
        android:id="@+id/start_pause_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@color/colorPrimary"
        android:enabled="false"
        android:text="@string/start_fragment_pause_text"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/start_left_center_barrier"
        app:layout_constraintTop_toTopOf="@+id/start_top_center_barrier" />

    <Button
        android:id="@+id/start_continue_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@color/colorPrimary"
        android:enabled="false"
        android:text="@string/start_fragment_continue_text"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/start_left_center_barrier"
        app:layout_constraintTop_toTopOf="@+id/start_top_center_barrier" />

    <Button
        android:id="@+id/start_stop_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@color/colorPrimary"
        android:enabled="false"
        android:text="@string/start_fragment_stop_text"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/start_right_center_barrier"
        app:layout_constraintTop_toTopOf="@+id/start_top_center_barrier" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/start_left_center_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:barrierDirection="start"
        app:constraint_referenced_ids="start_start_btn,start_lock_btn,start_unlock_btn" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/start_right_center_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:barrierDirection="end"
        app:constraint_referenced_ids="start_start_btn,start_lock_btn,start_unlock_btn" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/start_top_center_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:barrierDirection="top"
        app:constraint_referenced_ids="start_start_btn,start_lock_btn,start_unlock_btn" />

    <Button
        android:id="@+id/start_start_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@color/colorPrimary"
        android:text="@string/start_fragment_start_text"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/start_lock_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@color/colorPrimary"
        android:text="@string/start_fragment_lock_text"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/start_unlock_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@color/colorPrimary"
        android:text="@string/start_fragment_unlock_text"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/satelliteBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_baseline_map_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/locationBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_baseline_gps_fixed_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/distance_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/activityTime_text"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/activityTime_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/burnedCalories_text"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/burnedCalories_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/pace_text"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/pace_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/start_top_center_barrier"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>